# atlas

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: main.cpp
src/core/: Atlas.cpp  Atlas.hpp  Config.cpp  Config.hpp  Logger.cpp  Logger.hpp  PackageInstaller.cpp  PackageInstaller.hpp  PackageParser.cpp  PackageParser.hpp
src/utils/: Console.cpp  Console.hpp  File.cpp  File.hpp  JobSystem.cpp  JobSystem.hpp  LoadingAnimation.cpp  LoadingAnimation.hpp  Misc.cpp  Misc.hpp  MultiLoadingAnimation.cpp  MultiLoadingAnimation.hpp
